HuyNH update lại Test